Fix button pointer cursor not showing up

--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ header {
     color: #fff;
     text-align: center;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 .logo {
@@ -70,13 +70,29 @@ nav ul a {
     text-decoration: none;
 }
 
-ul, li {
+ul,
+li {
     padding: 0;
     list-style-type: none;
 }
 
+.toggle-menu {
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.5rem;
+  display: none;
+  padding: 0 20px;
+}
+
+.visible {
+  display: block;
+}
+
 button {
     border-radius: 8px;
+    cursor: pointer;
     font-size: 14px;
     padding: 12px 45px;
 }
@@ -118,10 +134,10 @@ header p {
 
 .header-img {
     border-radius: 20px;
-    box-shadow: 0px 10px 50px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.1);
     margin: 3rem 2rem 7rem 2rem;
+    position: relative;
     width: 92%;
-    z-index: 5;
 }
 
 header::after {
@@ -196,7 +212,7 @@ header::after {
 
 .pricing-card {
     border-radius: 14px;
-    box-shadow: 0px 10px 50px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.1);
     padding: 50px 14px;
     margin-top: 1rem;
     width: 385px;
@@ -214,8 +230,13 @@ header::after {
     color: #fff;
 }
 
-.pricing-card.popular h3, .pricing-card.popular p, .pricing-card.popular .price, .pricing-card.popular ul, .pricing-card.popular ul li::before {
-    color: #fff;;
+.pricing-card.popular h3,
+.pricing-card.popular p,
+.pricing-card.popular .price,
+.pricing-card.popular ul,
+.pricing-card.popular ul li::before {
+    color: #fff;
+    ;
 }
 
 .price-wrap {
@@ -235,12 +256,13 @@ header::after {
 }
 
 .pricing-card ul li::before {
-    content: "\f058"; /* FontAwesome Unicode */
+    content: "\f058";
+    /* FontAwesome Unicode */
     color: var(--red);
-  font-family: FontAwesome;
-  display: inline-block;
-  margin-right: 1rem;
-  width: 1rem;
+    font-family: FontAwesome;
+    display: inline-block;
+    margin-right: 1rem;
+    width: 1rem;
 }
 
 .pricing-card ul li.not-available {
@@ -310,4 +332,22 @@ footer h4 {
 footer a {
     color: #343434;
     line-height: 32px;
+}
+
+
+ @media screen and (max-width: 800px) {
+  .toggle-menu {
+    display: block;
+    margin-left: auto;
+  }
+
+  .menu {
+    border: 1px solid;
+    display: none;
+    padding: 20px;
+    position: absolute;
+    top: 66px;
+    right: 0;
+    min-width: 100%;
+  }
 }
